--- a/src/home.html
+++ b/src/home.html
@@ -5,10 +5,60 @@
 @@include('includes/header.html')
 
 <div class="container">
-  <div class="content" id="content">
-    <p></p>
-  </div>
-</div>
+      <div class="content section" id="content">
+        <div class="article-area">
+          <div class="article-section-title article-section-title-left-radius">X-PLOSION PRODUCTS</div>
+          <div class="spacer spacer-left"></div>
+          <div class="article-section article-section-border">
+            <div class="article-title">We say NO to artificial flavours</div>
+            <div class="article-body">
+            <a class="group1" href="img/home/sample1.png"><img src="img/home/sample1.png" alt=""></a>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lobortis justo nunc, eget viverra dolor pulvinar eget. In sit amet libero id nisl eleifend sodales.
+            <br />
+            <br />
+            <a href="#" class="article-more">More</a>
+            </div>
+          </div>
+          <div class="article-section article-section-border">
+            <div class="article-title">New flavour added</div>
+            <div class="article-body">
+            <a class="group1" href="img/home/sample2.png"><img src="img/home/sample2.png" alt=""></a>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lobortis justo nunc, eget viverra dolor pulvinar eget. In sit amet libero id nisl eleifend sodales.
+            <br />
+            <br />
+            <a href="#" class="article-more">More</a>
+            </div>
+          </div>
+        </div>
+        <div class="article-area">
+          <div class="article-section-title  article-section-title-right-radius">X-PLOSION EXPANSION</div>
+          <div class="spacer"></div>
+          <div class="article-section">
+            <div class="article-title">X-Plosion is a hit in Japan</div>
+            <div class="article-body">
+            <a class="group1" href="img/home/sample4.png"><img src="img/home/sample4.png" alt=""></a>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lobortis justo nunc, eget viverra dolor pulvinar eget. In sit amet libero id nisl eleifend sodales.
+            <br />
+            <br />
+            <a href="#" class="article-more">More</a>
+            </div>
+          </div>
+          <div class="article-section">
+            <div class="article-title">Danish elder hooked on X-Plosion</div>
+            <div class="article-body">
+            <a class="group1" href="img/home/sample3.png"><img src="img/home/sample3.png" alt=""></a>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lobortis justo nunc, eget viverra dolor pulvinar eget. In sit amet libero id nisl eleifend sodales.
+            <br />
+            <br />
+            <a href="#" class="article-more">More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+            <script>
+                jQuery('a.group1').colorbox({ opacity:0.5 , rel:'group1' });
+        </script>
 
 @@include('includes/sidebar.html')
 @@include('includes/footer.html')
