--- a/src/home.html
+++ b/src/home.html
@@ -12,7 +12,7 @@
           <div class="article-section article-section-border">
             <div class="article-title">We say NO to artificial flavours</div>
             <div class="article-body">
-            <a class="group1" href="img/home/sample1.gif"><img src="img/home/sample1.gif" alt=""></a>
+            <a class="group1" href="img/home/sample1.png"><img src="img/home/sample1.png" alt=""></a>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lobortis justo nunc, eget viverra dolor pulvinar eget. In sit amet libero id nisl eleifend sodales.
             <br />
             <br />
@@ -22,7 +22,7 @@
           <div class="article-section article-section-border">
             <div class="article-title">New flavour added</div>
             <div class="article-body">
-            <a class="group1" href="img/home/sample2.gif"><img src="img/home/sample2.gif" alt=""></a>
+            <a class="group1" href="img/home/sample2.png"><img src="img/home/sample2.png" alt=""></a>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lobortis justo nunc, eget viverra dolor pulvinar eget. In sit amet libero id nisl eleifend sodales.
             <br />
             <br />
@@ -36,7 +36,7 @@
           <div class="article-section">
             <div class="article-title">X-Plosion is a hit in Japan</div>
             <div class="article-body">
-            <a class="group1" href="img/home/sample4.gif"><img src="img/home/sample4.gif" alt=""></a>
+            <a class="group1" href="img/home/sample4.png"><img src="img/home/sample4.png" alt=""></a>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lobortis justo nunc, eget viverra dolor pulvinar eget. In sit amet libero id nisl eleifend sodales.
             <br />
             <br />
@@ -46,7 +46,7 @@
           <div class="article-section">
             <div class="article-title">Danish elder hooked on X-Plosion</div>
             <div class="article-body">
-            <a class="group1" href="img/home/sample3.gif"><img src="img/home/sample3.gif" alt=""></a>
+            <a class="group1" href="img/home/sample3.png"><img src="img/home/sample3.png" alt=""></a>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lobortis justo nunc, eget viverra dolor pulvinar eget. In sit amet libero id nisl eleifend sodales.
             <br />
             <br />
